<resources>
    <string name="app_name">RNDSPORT</string>
    <string name="text1">RNDSPORT ini merupakan aplikasi berbasis android untuk membantu pelanggan untuk melakukan penyewaan lapangan olahraga dengan sistem booking.</string>
    <string name="text2">Lapangan yang akan disewakan diantaranya, lapangan futsal, lapangan basket, lapangan tennis, dan lapangan badminton. Dan setiap pelanggan yang ingin melakukan booking harus melakukan H-1 sebelum jadwal yang diinginkan.</string>
    <string name="text3">Layanan Member mendapatkan diskon sebesar 10% setiap melakukan transaksi booking lapangan.</string>
    <string name="text">Kontak SPORTRND:</string>
    <string name="tex">No HP : 081263533433</string>
    <string name="txt">Email : sportrnd@gmail.com</string>
    <string name="txt2">BANTUAN</string>
    <string name="pilihfootball" />
    <string name="pilihbasket" />
    <string name="pilihtennis" />
    <string name="pilihbadminton" />
    <string name="Forget_Password">Froget_Password</string>
    <string name="forgot_password_msg">We just need your registerd Email to sent password reset instructtions.</string>
    <string name="btn_back">Back</string>
    <string name="lbl_forgot_password">Forget Password?</string>
    <string name="futsal">FUTSAL</string>
    <string name="lapangan1" />
    <string name="rajawali" />
    <string name="score" />
    <string name="galeri" />
    <string name="title_activity_menu">activity_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RNDSPORT</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lokasi">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
