<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="TENTANG SPORTRND"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="16dp" />
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:src="@drawable/logornd"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="63dp" />
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="431dp" />
        </android.support.design.widget.CoordinatorLayout>
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="Persyaratan Layanan"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="393dp" />
        </android.support.design.widget.CoordinatorLayout>
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/text2"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="597dp" />
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="Ketentuan Pengguna"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="565dp" />
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/text3"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="302dp" />
        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>